kube/backend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-api
  namespace: finance-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-api
  template:
    metadata:
      labels:
        app: finance-api
    spec:
      containers:
      - name: finance-api
        image: jesus6190/finance-backend:1.0.23
        ports:
        - containerPort: 8080
