kube/database-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-db
  namespace: finance-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-db
  template:
    metadata:
      labels:
        app: finance-db
    spec:
      containers:
      - name: finance-db
        image: postgres:17-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        emptyDir: {}
