kube/frontend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-client
  namespace: finance-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-client
  template:
    metadata:
      labels:
        app: finance-client
    spec:
      containers:
      - name: finance-client
        image: jesus6190/finance-frontend:1.0.2
        ports:
        - containerPort: 80
