kube/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: finance-bot
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
