kube/database-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: finance-bot
spec:
  selector:
    app: database
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
