kube/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: finance-bot
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
