kube/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-client-ingress
  namespace: finance-bot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - finance-bot.duckdns.org
    secretName: finance-client-tls
  rules:
  - host: finance-bot.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finance-client
            port:
              number: 80
